Adicionado parágrafo ao HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title> Curso Git e Github</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati suscipit perferendis laudantium delectus omnis enim ex sed at eum, soluta error debitis commodi quos ipsam veritatis mollitia quas autem adipisci!</p>
 </body>
 </html>
